<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/signup_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo_huver"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nombre"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_apellido"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Características de tu auto"
                android:textAlignment="textStart"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingTop="@dimen/activity_horizontal_margin"
                />

            <LinearLayout
                android:id="@+id/modelo_layout"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:text="Modelo:"/>

                <TextView
                    android:id="@+id/modelo_label"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:text=""/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/color_layout"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:text="Color:"/>

                <TextView
                    android:id="@+id/color_label"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/patente_layout"
                android:clickable="true">

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:text="Patente:"/>

                <TextView
                    android:id="@+id/patente_label"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/estado_layout"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:text="Estado:"/>

                <TextView
                    android:id="@+id/estado_label"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aire_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true">

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:text="Aire Acondicionado:"/>

                <TextView
                    android:id="@+id/aire_label"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/musica_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true">

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:text="Música:"/>

                <TextView
                    android:id="@+id/musica_label"
                    android:layout_marginLeft="20dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:textStyle="normal"
                    android:text=""/>
            </LinearLayout>

            <Button
                android:id="@+id/confirm_signup_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:text="Confirmar"
                android:textStyle="bold"/>
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
